# OpenglES

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RendererES2.cpp  RendererES3.cpp  gles3jni.cpp  glesRender.cpp
app/src/main/java/com/hawk/opengles/: GLES3JNILib.java  GLES3JNIView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
